--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,3 +1,18 @@
-<header>
-	Шапка всех страниц
+<header class="page-header">
+	<a class="page-header__logo" href="index.html">
+		<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy." width="70" height="60">
+		<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy." width="117" height="21">
+	</a>
+	<nav class="main-nav">
+		<button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
+		<ul class="main-nav__list site-list">
+			{% for page in pages %}
+			<li class="site-list__item site-list__item--current">
+				<a href="{{page.path}}" {% if permalink==page.path %}aria-current="page" {% endif %}>
+					{{page.name}}
+				</a>
+			</li>
+			{% endfor %}
+		</ul>
+	</nav>
 </header>
