add styles for index and catalog

--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -6,7 +6,7 @@
 			</a>
 		</div>
 		<div class="main-footer__social">
-			<h2 class="visually-hidden">Социальные Сети Кэт Энержи</h2>
+			<h2 class="visually-hidden">Социальные cети Кэт Энержи</h2>
 			<ul class="main-footer__social-list">
 				<li class="main-footer__social-item">
 					<a class="main-footer__social-item-vk" href="https://vk.com/htmlacademy"><span class="visually-hidden">Вконтакте</span>
@@ -26,7 +26,7 @@
 		</div>
 		<div class="main-footer__copyright copyright">
 			<a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-				<span class="visually-hidden">Разработано в</span>HTML Academy
+				<span class="visually-hidden">Разработано в</span> HTML Academy
 			</a>
 		</div>
 	</div>
