--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,20 @@
 @import "./global/variables.scss";
 @import "./global/global.scss";
 @import "./blocks/page.scss";
+@import "./blocks/header/page-header.scss";
+@import "./blocks/main/main-container.scss";
+@import "./blocks/main/cat-energy-description.scss";
+@import "./blocks/main/button.scss";
+@import "./blocks/main/program-type.scss";
+@import "./blocks/header/site-list.scss";
+@import "./blocks/main/advantages.scss";
+@import "./blocks/main/example.scss";
+@import "./blocks/main/before-after-slider.scss";
+@import "./blocks/main/cooperation.scss";
+@import "./blocks/footer/main-footer.scss";
+@import "./blocks/footer/copyright.scss";
+@import "./blocks/main/catalog.scss";
+@import "./blocks/main/product-card.scss";
+@import "./blocks/main/additional-catalog.scss";
+@import "./blocks/main/additional-pruduct-card.scss";
+@import "./blocks/main/promotion.scss";
