--- a/source/sass/blocks/main/button.scss
+++ b/source/sass/blocks/main/button.scss
@@ -7,6 +7,7 @@
 	text-decoration: none;
 	color: #ffffff;
 	background-color: rgba(104, 183, 56, 1);
+	border: none;
 
 	&:hover {
 		background-color: rgb(94, 170, 47);
