--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,12 @@
 @import "./blocks/main/additional-catalog.scss";
 @import "./blocks/main/additional-pruduct-card.scss";
 @import "./blocks/main/promotion.scss";
+@import "./blocks/main/form.scss";
+@import "./blocks/main/label.scss";
+@import "./blocks/main/field.scss";
+@import "./blocks/main/visually-hidden.scss";
+@import "./blocks/main/cat-information.scss";
+@import "./blocks/main/program-goal.scss";
+@import "./blocks/main/contacts.scss";
+@import "./blocks/main/additional.scss";
+@import "./blocks/main/form-button-wrapper.scss";
