--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -29,9 +29,11 @@
 	display: grid;
 	grid-template-columns: 70px 70px;
 	row-gap: 6px;
-	font-size: 12px;
+	font-family: "Lato", sans-serif;
+	font-size: 16px;
 	font-weight: 400;
-	line-height: 16px;
+	line-height: 20px;
+	text-align: center;
 }
 
 .product-card__description-item {
@@ -47,26 +49,4 @@
 .product-card__button {
 	padding: 10px 109px;
 	margin: 0;
-}
-
-.catalog__card-show-more-label {
-	font-family: "Oswald", sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 20px;
-	text-align: center;
-	color: rgba(17, 17, 17, 1);
-	text-transform: uppercase;
-}
-
-.catalog__card-show-more-description {
-	text-align: center;
-}
-
-.catalog__card-show-more-button {
-	background-color: rgb(242, 242, 242);
-	color: rgb(68, 68, 68);
-	padding: 10px 88px;
-	text-transform: uppercase;
-	text-decoration: none;
 }
