--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,29 +4,29 @@
 @import "./global/variables.scss";
 @import "./global/global.scss";
 @import "./blocks/page.scss";
-@import "./blocks/header/page-header.scss";
-@import "./blocks/main/main-container.scss";
-@import "./blocks/main/cat-energy-description.scss";
-@import "./blocks/main/button.scss";
-@import "./blocks/main/program-type.scss";
-@import "./blocks/header/site-list.scss";
-@import "./blocks/main/advantages.scss";
-@import "./blocks/main/example.scss";
-@import "./blocks/main/before-after-slider.scss";
-@import "./blocks/main/cooperation.scss";
-@import "./blocks/footer/main-footer.scss";
-@import "./blocks/footer/copyright.scss";
-@import "./blocks/main/catalog.scss";
-@import "./blocks/main/product-card.scss";
-@import "./blocks/main/additional-catalog.scss";
-@import "./blocks/main/additional-pruduct-card.scss";
-@import "./blocks/main/promotion.scss";
-@import "./blocks/main/form.scss";
-@import "./blocks/main/label.scss";
-@import "./blocks/main/field.scss";
-@import "./blocks/main/visually-hidden.scss";
-@import "./blocks/main/cat-information.scss";
-@import "./blocks/main/program-goal.scss";
-@import "./blocks/main/contacts.scss";
-@import "./blocks/main/additional.scss";
-@import "./blocks/main/form-button-wrapper.scss";
+@import "./blocks/page-header.scss";
+@import "./blocks/main-container.scss";
+@import "./blocks/cat-energy-description.scss";
+@import "./blocks/button.scss";
+@import "./blocks/program-type.scss";
+@import "./blocks/site-list.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/example.scss";
+@import "./blocks/before-after-slider.scss";
+@import "./blocks/cooperation.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/copyright.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/product-card.scss";
+@import "./blocks/additional-catalog.scss";
+@import "./blocks/additional-pruduct-card.scss";
+@import "./blocks/promotion.scss";
+@import "./blocks/form.scss";
+@import "./blocks/label.scss";
+@import "./blocks/field.scss";
+@import "./blocks/visually-hidden.scss";
+@import "./blocks/cat-information.scss";
+@import "./blocks/program-goal.scss";
+@import "./blocks/extra-form-title.scss";
+@import "./blocks/additional.scss";
+@import "./blocks/form-button.scss";
