Change stylelint config

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -8,11 +8,11 @@
 	font-weight: 400;
 	font-size: 36px;
 	line-height: 40px;
-	color: rgba(0, 0, 0, 1);
+	color: rgb(0 0 0 / 1);
 	text-transform: none;
 	text-align: left;
 }
 
 .advantages__item {
-	color: rgba(68, 68, 68, 1);
+	color: rgb(68 68 68 / 1);
 }
