--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,15 +6,15 @@
 	text-align: center;
 	text-decoration: none;
 	color: #ffffff;
-	background-color: rgba(104, 183, 56, 1);
+	background-color: rgb(104 183 56 / 1);
 	border: none;
 
 	&:hover {
-		background-color: rgb(94, 170, 47);
+		background-color: rgb(94 170 47);
 	}
 
 	&:active {
-		background-color: rgb(94, 170, 47);
-		color: rgb(255, 255, 255, 0.3);
+		background-color: rgb(94 170 47);
+		color: rgb(255 255 255 / 0.3);
 	}
 }
