--- a/source/sass/blocks/additional-pruduct-card.scss
+++ b/source/sass/blocks/additional-pruduct-card.scss
@@ -5,7 +5,7 @@
 	line-height: 16px;
 	text-align: left;
 	text-transform: uppercase;
-	color: rgb(34, 34, 34);
+	color: rgb(34 34 34);
 }
 
 .additional-product-card__discription {
