--- a/source/sass/blocks/cat-energy-description.scss
+++ b/source/sass/blocks/cat-energy-description.scss
@@ -6,14 +6,14 @@
 	line-height: 36px;
 	text-align: center;
 	color: #ffffff;
-	background-color: rgba(104, 183, 56, 1);
+	background-color: rgb(104 183 56 / 1);
 }
 
 .cat-energy-description__text {
 	font-size: 14px;
 	line-height: 14px;
 	color: #ffffff;
-	background-color: rgba(104, 183, 56, 1);
+	background-color: rgb(104 183 56 / 1);
 	text-align: center;
 	text-transform: uppercase;
 }
