--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -3,7 +3,7 @@
 	font-size: 36px;
 	font-weight: 400;
 	line-height: 36px;
-	color: rgba(0, 0, 0, 1);
+	color: rgb(0 0 0 / 1);
 	text-align: center;
 }
 
@@ -20,7 +20,7 @@
 	font-weight: 400;
 	line-height: 20px;
 	text-align: center;
-	color: rgba(17, 17, 17, 1);
+	color: rgb(17 17 17 / 1);
 	text-transform: uppercase;
 }
 
@@ -29,8 +29,8 @@
 }
 
 .catalog__card-show-more-button {
-	background-color: rgb(242, 242, 242);
-	color: rgb(68, 68, 68);
+	background-color: rgb(242 242 242);
+	color: rgb(68 68 68);
 	padding: 10px 88px;
 	text-transform: uppercase;
 	text-decoration: none;
