--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,5 +1,5 @@
 .copyright__link {
-	color: rgba(68, 68, 68, 1);
+	color: rgb(68 68 68 / 1);
 	font-family: "Lato", sans-serif;
 	font-size: 16px;
 	font-weight: 400;
