--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,5 +1,5 @@
 .example {
-	background-color: rgb(234, 234, 234);
+	background-color: rgb(234 234 234);
 }
 
 .example__title {
@@ -7,7 +7,7 @@
 	font-weight: 400;
 	font-size: 36px;
 	line-height: 40px;
-	color: rgba(0, 0, 0, 1);
+	color: rgb(0 0 0 / 1);
 	text-transform: none;
 	text-align: left;
 }
@@ -22,7 +22,7 @@
 	font-weight: 400;
 	line-height: 12px;
 	text-align: center;
-	color: rgba(68, 68, 68, 1);
+	color: rgb(68 68 68 / 1);
 
 	&--total {
 		font-family: "Oswald", sans-serif;
@@ -31,7 +31,7 @@
 		line-height: 20px;
 		text-transform: uppercase;
 		text-align: center;
-		color: rgba(0, 0, 0, 1);
+		color: rgb(0 0 0 / 1);
 	}
 }
 
@@ -42,7 +42,7 @@
 	line-height: 24px;
 	text-transform: uppercase;
 	text-align: center;
-	color: rgba(0, 0, 0, 1);
+	color: rgb(0 0 0 / 1);
 
 	&--total {
 		font-family: "Oswald", sans-serif;
@@ -51,6 +51,6 @@
 		line-height: 20px;
 		text-transform: uppercase;
 		text-align: center;
-		color: rgba(0, 0, 0, 1);
+		color: rgb(0 0 0 / 1);
 	}
 }
