--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -1,12 +1,12 @@
 .field {
-	background-color: rgb(255, 255, 255);
-	border: 1px solid rgba(231, 231, 231, 1);
+	background-color: rgb(255 255 255);
+	border: 1px solid rgb(231 231 231 / 1);
 	font-family: "Oswald", sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 18px;
 	text-transform: uppercase;
 	text-align: left;
-	color: rgba(68, 68, 68, 1);
+	color: rgb(68 68 68 / 1);
 	appearance: textfield;
 }
