--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -4,7 +4,7 @@
 	font-weight: 400;
 	line-height: 36px;
 	text-align: left;
-	color: rgb(0, 0, 0);
+	color: rgb(0 0 0);
 }
 
 .form__description {
@@ -14,5 +14,5 @@
 	line-height: 18px;
 	text-transform: uppercase;
 	text-align: left;
-	color: rgb(0, 0, 0);
+	color: rgb(0 0 0);
 }
