--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -22,7 +22,7 @@
 	line-height: 20px;
 	text-align: left;
 	text-transform: uppercase;
-	color: rgb(34, 34, 34);
+	color: rgb(34 34 34);
 }
 
 .product-card__description {
