--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -1,4 +1,4 @@
 .promotion {
-	background-color: rgb(104, 183, 56);
-	color: rgb(255, 255, 255);
+	background-color: rgb(104 183 56);
+	color: rgb(255 255 255);
 }
