--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -9,6 +9,6 @@
 	line-height: 20px;
 	text-align: center;
 	text-transform: uppercase;
-	color: rgb(0, 0, 0);
+	color: rgb(0 0 0);
 	text-decoration: none;
 }
