--- a/source/sass/blocks/cooperation.scss
+++ b/source/sass/blocks/cooperation.scss
@@ -13,7 +13,7 @@
 	line-height: 20px;
 	text-align: left;
 	text-transform: uppercase;
-	color: rgb(17 17 17 / 1);
+	color: rgb(17 17 17);
 }
 
 .cooperation__adress-adress {
