--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,3 +30,5 @@
 @import "./blocks/extra-form-title.scss";
 @import "./blocks/additional.scss";
 @import "./blocks/form-button.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/page-form.scss";
