--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,4 +1,5 @@
 <header class="page-header">
+	<div class="page-header__wrapper page__centerer">
 	<a class="page-header__logo" href="index.html">
 		<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy." width="70" height="60">
 		<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy." width="117" height="21">
@@ -15,4 +16,4 @@
 			{% endfor %}
 		</ul>
 	</nav>
-</header>
+	</div></header>
