--- a/source/sass/blocks/additional-catalog.scss
+++ b/source/sass/blocks/additional-catalog.scss
@@ -1,3 +1,19 @@
+@media #{$desktop-only} {
+	.additional-catalog {
+		display: grid;
+		grid-template-columns: 896px 245px;
+		gap: 79px;
+	}
+
+	.additional-catalog__promotion {
+		grid-column: 2/3;
+	}
+
+	.additional-catalog__label {
+		grid-column: 1/3;
+	}
+}
+
 .additional-catalog__label {
 	font-family: "Oswald", sans-serif;
 	font-size: 24px;
