--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -8,5 +8,19 @@
 	line-height: 18px;
 	text-transform: uppercase;
 	text-align: left;
-	color: rgb(0 0 0 / 1);
+	color: rgb(0 0 0);
+}
+
+@media #{$not-mobile} {
+	.additional__product-list {
+		display: grid;
+		grid-template-columns: 50% 50%;
+	}
+}
+
+@media #{$desktop-only} {
+	.additional__product-list {
+		display: flex;
+		justify-content: space-between;
+	}
 }
