--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,7 +6,7 @@
 	text-align: center;
 	text-decoration: none;
 	color: #ffffff;
-	background-color: rgb(104 183 56 / 1);
+	background-color: var(--accent-color);
 	border: none;
 
 	&:hover {
