--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -14,13 +14,29 @@
 	padding: 0;
 }
 
+@media #{$not-mobile} {
+	.catalog__card-list {
+		display: grid;
+		grid-template-columns: 324px 324px;
+		gap: 60px;
+	}
+}
+
+@media #{$desktop-only} {
+	.catalog__card-list {
+		display: grid;
+		grid-template-columns: 245px 245px 245px 245px;
+		gap: 60px 80px;
+	}
+}
+
 .catalog__card-show-more-label {
 	font-family: "Oswald", sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 20px;
 	text-align: center;
-	color: rgb(17 17 17 / 1);
+	color: rgb(17 17 17);
 	text-transform: uppercase;
 }
 
@@ -30,7 +46,7 @@
 
 .catalog__card-show-more-button {
 	background-color: rgb(242 242 242);
-	color: rgb(68 68 68);
+	color: var(--main-color);
 	padding: 10px 88px;
 	text-transform: uppercase;
 	text-decoration: none;
