--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -14,6 +14,39 @@
 
 .example__result-list {
 	list-style-type: none;
+	display: grid;
+	grid-template-columns: 125px 124px;
+	gap: 32px;
+}
+
+@media #{$not-mobile} {
+	.example__result-list {
+		display: grid;
+		grid-template-columns: 25% 25% 50%;
+	}
+}
+
+@media #{$desktop-only} {
+	.example {
+		display: grid;
+		grid-template-columns: 50% 50%;
+	}
+
+	.example__slider {
+		grid-row: 1/4;
+		grid-column: 2/3;
+	}
+
+	.example__result-list {
+		display: grid;
+		grid-template-columns: 50% 50%;
+	}
+}
+
+@media #{$mobile-only} {
+	.example__result-item--total {
+		grid-column: 1/-1;
+	}
 }
 
 .example__result-description {
@@ -22,7 +55,7 @@
 	font-weight: 400;
 	line-height: 12px;
 	text-align: center;
-	color: rgb(68 68 68 / 1);
+	color: var(--main-color);
 
 	&--total {
 		font-family: "Oswald", sans-serif;
@@ -43,6 +76,7 @@
 	text-transform: uppercase;
 	text-align: center;
 	color: rgb(0 0 0 / 1);
+	margin: 0;
 
 	&--total {
 		font-family: "Oswald", sans-serif;
