--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -7,6 +7,6 @@
 	line-height: 18px;
 	text-transform: uppercase;
 	text-align: left;
-	color: rgb(68 68 68 / 1);
+	color: var(--main-color);
 	appearance: textfield;
 }
