--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,11 +1,19 @@
 .main-footer {
 	background-color: rgb(242 242 242);
+	width: 100%;
 }
 
 .main-footer__social-list {
 	display: flex;
 	gap: 24px;
 	list-style-type: none;
+}
+
+@media #{$not-mobile} {
+	.main-footer__wrapper {
+		display: flex;
+		justify-content: space-between;
+	}
 }
 
 .main-footer__copyright {
