--- a/source/sass/blocks/program-type.scss
+++ b/source/sass/blocks/program-type.scss
@@ -1,5 +1,13 @@
 .program-type {
 	list-style-type: none;
+	padding: 0;
+}
+
+@media #{$desktop-only} {
+	.program-type {
+		display: flex;
+		gap: 80px;
+	}
 }
 
 .program-type__card {
@@ -22,7 +30,7 @@
 	font-weight: 400;
 	line-height: 18px;
 	text-align: left;
-	color: rgb(68 68 68 / 1);
+	color: var(--main-color);
 }
 
 .program-type__card-button {
