--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -12,3 +12,23 @@
 	color: rgb(0 0 0);
 	text-decoration: none;
 }
+
+@media #{$not-mobile} {
+	.site-list {
+		display: flex;
+		gap: 34px;
+	}
+
+	.site-list__item-link {
+		font-size: 18px;
+		font-weight: 400;
+		line-height: 24px;
+		text-align: left;
+	}
+}
+
+@media #{$desktop-only} {
+	.site-list {
+		gap: 37px;
+	}
+}
