--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,5 +1,5 @@
 <footer class="main-footer">
-	<div class="main-footer__wrapper">
+	<div class="main-footer__wrapper page__centerer">
 		<div class="main-footer__logo">
 			<a class="main-footer__logo-link" href="index.html">
 				<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy." width="128" height="24">
