--- a/source/sass/blocks/program-type.scss
+++ b/source/sass/blocks/program-type.scss
@@ -5,7 +5,8 @@
 
 @media #{$desktop-only} {
 	.program-type {
-		display: flex;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
 		gap: 80px;
 	}
 }
