--- a/source/sass/blocks/additional-catalog.scss
+++ b/source/sass/blocks/additional-catalog.scss
@@ -1,16 +1,19 @@
 @media #{$desktop-only} {
-	.additional-catalog {
+	.additional-catalog__wrapper {
 		display: grid;
-		grid-template-columns: 896px 245px;
-		gap: 79px;
+		grid-template-columns: 3fr 1fr;
+		column-gap: 80px;
 	}
 
-	.additional-catalog__promotion {
-		grid-column: 2/3;
+	.additional-catalog__list {
+		display: grid;
+		gap: 54px;
 	}
+}
 
-	.additional-catalog__label {
-		grid-column: 1/3;
+@media #{$not-mobile} {
+	.additional-catalog__list {
+		gap: 54px;
 	}
 }
 
@@ -26,6 +29,12 @@
 .additional-catalog__list {
 	list-style-type: none;
 	padding: 0;
-	display: grid;
-	gap: 31px;
+}
+
+
+@media #{$mobile-only} {
+	.additional-catalog__list {
+		display: grid;
+		gap: 32px;
+	}
 }
