--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -20,7 +20,8 @@
 
 @media #{$desktop-only} {
 	.additional__product-list {
-		display: flex;
-		justify-content: space-between;
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		gap: 80px;
 	}
 }
