--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -3,20 +3,22 @@
 	text-align: left;
 	display: grid;
 	gap: 24px;
+	padding: 0;
 }
 
 @media #{$not-mobile} {
 	.advantages__list {
 		display: grid;
-		grid-template-columns: 230px 230px;
+		grid-template-columns: repeat(2, 1fr);
 		gap: 37px 153px;
 	}
 }
 
 @media #{$desktop-only} {
 	.advantages__list {
-		display: flex;
-		gap: 94px;
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		gap: 80px;
 	}
 }
 
