--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -10,24 +10,9 @@
 .catalog__card-list {
 	list-style-type: none;
 	display: grid;
-	gap: 25px;
 	padding: 0;
-}
-
-@media #{$not-mobile} {
-	.catalog__card-list {
-		display: grid;
-		grid-template-columns: 324px 324px;
-		gap: 60px;
-	}
-}
-
-@media #{$desktop-only} {
-	.catalog__card-list {
-		display: grid;
-		grid-template-columns: 245px 245px 245px 245px;
-		gap: 60px 80px;
-	}
+	grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
+	gap: clamp(60px, calc(30px + 100vw / 25.6), 80px);
 }
 
 .catalog__card-show-more-label {
