--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,6 +1,8 @@
 .main-footer {
 	background-color: rgb(242 242 242);
 	width: 100%;
+	position: sticky;
+	top: 100vh;
 }
 
 .main-footer__social-list {
