--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,3 +32,5 @@
 @import "./blocks/form-button.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/page-form.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/comment.scss";
