--- a/source/sass/blocks/cat-energy-description.scss
+++ b/source/sass/blocks/cat-energy-description.scss
@@ -1,4 +1,31 @@
+.cat-energy-description {
+	display: grid;
+}
 
+@media #{$not-mobile} {
+	.cat-energy-description__wrapper {
+		display: contents;
+	}
+
+	.cat-energy-description__button {
+		grid-template-rows: 3/4;
+	}
+
+	.cat-energy-description__img {
+		grid-template-columns: 3/4;
+	}
+}
+
+@media #{$desktop-only} {
+	.cat-energy-description {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.cat-energy-description__wrapper {
+		display: block;
+	}
+}
 
 .cat-energy-description__title {
 	font-family: "Oswald", sans-serif;
