--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -9,9 +9,7 @@
 .page__body {
 	margin: 0;
 	min-height: 100%;
-	background: hsl(0 0% 96%) var(--bg-image) no-repeat center / contain;
-
-	@include bg-image(test);
+	background: hsl(0 0% 96%) var;
 }
 
 .page__centerer {
