--- a/source/sass/blocks/cat-energy-description.scss
+++ b/source/sass/blocks/cat-energy-description.scss
@@ -2,17 +2,33 @@
 	display: grid;
 }
 
-@media #{$not-mobile} {
+@media #{$not-desktop} {
 	.cat-energy-description__wrapper {
 		display: contents;
 	}
+}
 
+@media #{$tablet-only} {
 	.cat-energy-description__button {
-		grid-template-rows: 3/4;
+		grid-row: 3/4;
+		grid-column: 1/3;
+		width: 166px;
+		height: 41px;
 	}
 
 	.cat-energy-description__img {
-		grid-template-columns: 3/4;
+		grid-row: 3/4;
+		grid-column: 1/3;
+	}
+
+	.cat-energy-description__title {
+		grid-column: 1/3;
+		text-align: left;
+	}
+
+	.cat-energy-description__text {
+		grid-column: 1/3;
+		text-align: left;
 	}
 }
 
@@ -20,10 +36,6 @@
 	.cat-energy-description {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-	}
-
-	.cat-energy-description__wrapper {
-		display: block;
 	}
 }
 
@@ -49,5 +61,5 @@
 
 .cat-energy-description__button {
 	padding: 7px 44px;
-	order: 3;
+	order: 4;
 }
