--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,3 +33,4 @@
 @import "./blocks/page-form.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/comment.scss";
+@import "./blocks/map.scss";
