--- a/source/sass/blocks/cat-energy-description.scss
+++ b/source/sass/blocks/cat-energy-description.scss
@@ -1,5 +1,8 @@
 .cat-energy-description {
 	display: grid;
+	background: var(--bg-image) no-repeat center / contain;
+
+	@include bg-image("cat-background");
 }
 
 @media #{$not-desktop} {
