--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -12,6 +12,10 @@
 	display: contents;
 }
 
+.page-header__logo-svg-text {
+	color: rgb(253 195 5);
+}
+
 @media #{$not-mobile} {
 	.page-header__toggle {
 		display: none;
