--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,11 +1,17 @@
 <header class="page-header">
 	<div class="page-header__wrapper page__centerer">
-	<div class="page-header__logo-toggle-wrapper">
-		<a class="page-header__logo" href="index.html">
-		<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy." width="70" height="60">
-		<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy." width="117" height="21">
-	</a>
-		<button class="page-header__toggle page-header__toggle--nojs" type="button"><span class="visually-hidden">Открыть меню</span></button></div>
+		<div class="page-header__logo-toggle-wrapper">
+			<a class="page-header__logo" href="index.html">
+				<svg class="page-header__logo-svg" width="33" height="37" style="margin-top: 11px">
+					<use xlink:href="#logo-mobile"></use>
+				</svg>
+
+				<svg class="page-header__logo-svg-text" width="101" height="18" style="margin-top: 22px">
+					<use xlink:href="#logo-text"></use>
+				</svg>
+			</a>
+			<button class="page-header__toggle page-header__toggle--nojs" type="button"><span class="visually-hidden">Открыть меню</span></button>
+		</div>
 		<ul class="page-header__nav-list page-header__nav-list--nojs site-list">
 			{% for page in pages %}
 			<li class="site-list__item site-list__item--current ">
@@ -15,5 +21,6 @@
 			</li>
 			{% endfor %}
 		</ul>
-	</nav>
-	</div></header>
+		</nav>
+	</div>
+</header>
