--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -3,11 +3,11 @@
 		<div class="page-header__logo-toggle-wrapper">
 			<a class="page-header__logo" href="index.html">
 				<svg class="page-header__logo-svg" width="33" height="37" style="margin-top: 11px">
-					<use xlink:href="#logo-mobile"></use>
+					<use href="img/logo.svg#icon-mobile"></use>
 				</svg>
 
 				<svg class="page-header__logo-svg-text" width="101" height="18" style="margin-top: 22px">
-					<use xlink:href="#logo-text"></use>
+					<use href="img/logo.svg#icon-text"></use>
 				</svg>
 			</a>
 			<button class="page-header__toggle page-header__toggle--nojs" type="button"><span class="visually-hidden">Открыть меню</span></button>
