--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -2,13 +2,8 @@
 	<div class="page-header__wrapper page__centerer">
 		<div class="page-header__logo-toggle-wrapper">
 			<a class="page-header__logo" href="index.html">
-				<svg class="page-header__logo-svg" width="33" height="37" style="margin-top: 11px">
-					<use href="img/logo.svg#logo-mobile"></use>
-				</svg>
-
-				<svg class="page-header__logo-svg-text" width="101" height="18" style="margin-top: 22px">
-					<use href="img/logo.svg#logo-text"></use>
-				</svg>
+				<img class="page-header__logo-mobile" src="../icons/stack.svg#logo-mobile" width="70" height="59" alt="Кот в костюме супер-героя">
+				<img class="page-header__logo-text" src="../icons/stack.svg#logo-text" alt="CAT ENERGY" width="101" height="18">
 			</a>
 			<button class="page-header__toggle page-header__toggle--nojs" type="button"><span class="visually-hidden">Открыть меню</span></button>
 		</div>
