--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -2,7 +2,7 @@
 	<div class="page-header__wrapper page__centerer">
 		<div class="page-header__logo-toggle-wrapper">
 			<a class="page-header__logo" href="index.html">
-				<img class="page-header__logo-mobile" src="./img/logo.svg#logo-mobile" width="33" height="37" alt="Кот в костюме супер-героя">
+				<img class="page-header__logo-mobile" src="./img/logo.svg#logo-mobile" alt="CAT ENERGY" width="33" height="37">
 				<img class="page-header__logo-text" src="./img/logo.svg#logo-text" alt="CAT ENERGY" width="101" height="18">
 			</a>
 			<button class="page-header__toggle page-header__toggle--nojs" type="button"><span class="visually-hidden">Открыть меню</span></button>
