--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,9 +1,52 @@
 .copyright__link {
 	color: rgb(68 68 68 / 1);
 	font-family: "Lato", sans-serif;
-	font-size: 16px;
 	font-weight: 400;
-	line-height: 19px;
 	text-align: left;
 	text-decoration: none;
+
+	.copyright__link {
+		font-size: 16px;
+		line-height: 19px;
+		position: relative;
+	}
+
+	@media #{$mobile-only} {
+		.copyright__link::after {
+			content: "";
+			position: absolute;
+			display: block;
+			width: 27px;
+			height: 34px;
+			background-image: url("/icons/stack.svg#html-academy-logo");
+			left: 250px;
+			top: -7px;
+		}
+	}
+}
+
+@media #{$tablet-only} {
+	.copyright__link::after {
+		content: "";
+		position: absolute;
+		display: block;
+		width: 27px;
+		height: 34px;
+		background-image: url("/icons/stack.svg#html-academy-logo");
+		left: 713px;
+		top: 55px;
+	}
+}
+
+@media #{$desktop-only} {
+	.copyright__link::after {
+		content: "";
+		position: absolute;
+		display: block;
+		width: 27px;
+		height: 34px;
+		background-image: url("/icons/stack.svg#html-academy-logo");
+		left: 1302px;
+		top: 55px;
+	}
 }
