--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -2,24 +2,24 @@
 	<div class="main-footer__wrapper page__centerer">
 		<div class="main-footer__logo">
 			<a class="main-footer__logo-link" href="index.html">
-				<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy." width="128" height="24">
+				<img class="main-footer__logo-text" src="./img/logo.svg#logo-text" alt="CAT ENERGY" width="128" height="24">
 			</a>
 		</div>
 		<div class="main-footer__social">
 			<h2 class="visually-hidden">Социальные cети Кэт Энержи</h2>
 			<ul class="main-footer__social-list">
 				<li class="main-footer__social-item">
-					<a class="main-footer__social-item-vk" href="https://vk.com/htmlacademy"><span class="visually-hidden">Вконтакте</span>
+					<a class="main-footer__social-link--vk" href="https://vk.com/htmlacademy"><span class="visually-hidden">Вконтакте</span>
 					</a>
 				</li>
 				<li class="main-footer__social-item">
 
-					<a class="main-footer__social-item-youtube" href="https://youtube.com/user/htmlacademyru"><span class="visually-hidden">YouTube</span>
+					<a class="main-footer__social-link main-footer__social-link--youtube" href="https://youtube.com/user/htmlacademyru"><span class="visually-hidden">YouTube</span>
 					</a>
 				</li>
 				<li class="main-footer__social-item">
 
-					<a class="main-footer__social-item-telegram" href="https://t.me/htmlacademy"><span class="visually-hidden">Телеграм</span>
+					<a class="main-footer__social-link main-footer__social-link--telegram" href="https://t.me/htmlacademy"><span class="visually-hidden">Телеграм</span>
 					</a>
 				</li>
 			</ul>
