--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -9,7 +9,7 @@
 			<h2 class="visually-hidden">Социальные cети Кэт Энержи</h2>
 			<ul class="main-footer__social-list">
 				<li class="main-footer__social-item">
-					<a class="main-footer__social-link--vk" href="https://vk.com/htmlacademy"><span class="visually-hidden">Вконтакте</span>
+					<a class="main-footer__social-link main-footer__social-link--vk" href="https://vk.com/htmlacademy"><span class="visually-hidden">Вконтакте</span>
 					</a>
 				</li>
 				<li class="main-footer__social-item">
