--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,7 +5,6 @@
 	gap: 24px;
 	padding: 0;
 	margin: 0;
-	counter-reset: section;
 }
 
 @media #{$mobile-only} {
@@ -161,12 +160,13 @@
 	.advantages__list {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		gap: 37px 153px;
+		gap: 37px 137px;
 	}
 
 	.advantages__item {
 		width: 245px;
 		position: relative;
+		padding: 151px 26px 57px 0;
 
 		&::before {
 			content: "";
