--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,3 +34,4 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/comment.scss";
 @import "./blocks/map.scss";
+@import "./blocks/disabled.scss";
