--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -90,7 +90,7 @@
 	.advantages__item {
 		font-size: 16px;
 		line-height: 24px;
-		padding-top: 183px;
+		padding: 151px 26px 57px 0;
 		width: 248px;
 		position: relative;
 
